--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-half" >
         <img src="ccis team.jpg" style="width:350px">
         <img src="summer.jpg" style="width:350px">
-        <img src="fishing1.jpg" style="width:350px">
-        <img scr="baba.jpg" style="width:350px"
+        <img src="baba.jpg" style="width:350px">
       </div>
 
       <div class="w3-half">
